disable cloth config dependency for forge version

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 	forge "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	// Architectury-api
 	modApi "dev.architectury:architectury-forge:${architectury_version}"
-	// Cloth Config API
-	api "me.shedaniel.cloth:cloth-config-forge:${cloth_config_api_version}"
+	//	// Cloth Config API
+	//	api "me.shedaniel.cloth:cloth-config-forge:${cloth_config_api_version}"
 	//
 	common(project(path: ":common", configuration: "namedElements")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
