--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ subprojects {
 		minecraft "com.mojang:minecraft:${minecraft_version}"
 		mappings loom.officialMojangMappings()
 	}
+	processResources {
+		eachFile { expand rootProject.properties }
+	}
 }
 
 allprojects {
@@ -27,18 +30,12 @@ allprojects {
 	group = mod_group_id
 	repositories {
 		mavenLocal()
-		
 		mavenCentral()
-		maven { url 'https://maven.aliyun.com/repository/public' }
-		maven { url 'https://maven.aliyun.com/repository/google' }
-		//
 		maven { url "https://jitpack.io" }
-		maven { url "https://maven.terraformersmc.com/releases" }
-		maven { url "https://maven.quiltmc.org/repository/release" }
-		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 		// Cloth Config API
 		maven { url "https://maven.shedaniel.me/" }
-		maven { url "https://maven.terraformersmc.com/releases/" }
+		// Mod Menu
+		maven { url "https://maven.terraformersmc.com/releases" }
 		
 	}
 	tasks.withType(JavaCompile) {
@@ -48,11 +45,9 @@ allprojects {
 	java {
 		withSourcesJar()
 	}
-	tasks.withType(Jar).configureEach {
+	jar {
 		setDuplicatesStrategy DuplicatesStrategy.INCLUDE
-		from {
-			rootProject.file("LICENSE.txt")
-		}
+		from rootProject.file("LICENSE.txt")
 	}
 }
 
