--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -27,12 +27,6 @@ dependencies {
 	// ModMenu
 	modApi("com.terraformersmc:modmenu:${modmenu_version}") { transitive(false) }
 }
-processResources {
-	inputs.property "version", project.version
-	eachFile {
-		expand rootProject.properties
-	}
-}
 shadowJar {
 	exclude "architectury.common.json"
 	configurations = [project.configurations.shadowCommon]
@@ -46,9 +40,7 @@ remapJar {
 sourcesJar {
 	def commonSources = project(":common").sourcesJar
 	dependsOn commonSources
-	from commonSources.archiveFile.map {
-		zipTree(it)
-	}
+	from commonSources.archiveFile.map { zipTree(it) }
 }
 base {
 	archivesName = rootProject.archiveFileNameOfPlatform("fabric")
@@ -67,8 +59,6 @@ publishing {
 		}
 	}
 	
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
 	}
 }
