update build script

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -22,7 +22,7 @@ configurations {
 	developmentForge.extendsFrom common
 }
 dependencies {
-	forge "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+	forge "net.minecraftforge:forge:${forge_version}"
 	common(project(path: ":common", configuration: "namedElements")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
 	// Architectury-api
