--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ mod_id                   = leawind_third_person
 mod_version              = 2.0.3
 mod_group_id             = net.leawind.mc.thirdperson
 mod_name                 = Leawind's Third Person
-mod_description          = Enhanced third-person
+mod_description          = Enhanced third person
 mod_license              = The MIT License (MIT)
 mod_icon                 = assets/leawind_third_person/icon.png
 mod_authors              = Leawind
@@ -18,10 +18,10 @@ architectury_version     = 6.5.85
 #https://fabricmc.net/develop/
 # latest: 0.15.3/0.77.0, template: 0.14.23/0.76.1
 fabric_loader_version    = 0.14.23
-fabric_api_version       = 0.76.1
+fabric_api_version       = 0.76.1+1.19.2
 #https://files.minecraftforge.net/net/minecraftforge/forge/
 # latest: 43.3.7, template: 43.3.2
-forge_version            = 43.3.2
+forge_version            = 1.19.2-43.3.2
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
 modmenu_version          = 4.2.0-beta.2
