--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -17,7 +17,7 @@ configurations {
 }
 dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
-	modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}+${minecraft_version}"
+	modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 	common(project(path: ":common", configuration: "namedElements")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 	// Architectury-api
