--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,7 @@ ij_visual_guides            = none
 ij_wrap_on_typing           = false
 
 [*.java]
+end_of_line                                                     = lf
 ij_continuation_indent_size                                     = 4
 ij_smart_tabs                                                   = false
 ij_visual_guides                                                = 64
@@ -376,6 +377,7 @@ ij_shell_switch_cases_indented         = false
 ij_shell_use_unix_line_separator       = true
 
 [{*.gant,*.groovy,*.gy}]
+end_of_line                                                = lf
 ij_smart_tabs                                              = false
 ij_groovy_align_group_field_declarations                   = false
 ij_groovy_align_multiline_array_initializer_expression     = true
@@ -614,6 +616,7 @@ ij_html_space_inside_empty_tag             = false
 ij_html_text_wrap                          = normal
 
 [{*.kt,*.kts}]
+end_of_line                                                                          = lf
 indent_style                                                                         = space
 ij_smart_tabs                                                                        = false
 ij_kotlin_align_in_columns_case_branch                                               = false
