--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-# No quote for string
 org.gradle.jvmargs       = -Xmx2048M
+
 minecraft_version        = 1.19.2
 mod_id                   = leawind_third_person
 mod_version              = 2.0.4
@@ -12,18 +12,27 @@ mod_authors              = Leawind
 mod_url_home             = https://github.com/LEAWIND/Third-Person/wiki
 mod_url_issue            = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src              = https://github.com/LEAWIND/Third-Person
+
+#https://minecraft.wiki/w/Pack_format
+resource_pack_format     = 9
+
 #https://modrinth.com/mod/architectury-api/versions
 enabled_platforms        = fabric,forge
 architectury_version     = 6.5.85
+
 #https://fabricmc.net/develop/
 # latest: 0.15.3/0.77.0, template: 0.14.23/0.76.1
+
 fabric_loader_version    = 0.14.23
 fabric_api_version       = 0.76.1+1.19.2
+
 #https://files.minecraftforge.net/net/minecraftforge/forge/
 # latest: 43.3.7, template: 43.3.2
 forge_version            = 1.19.2-43.3.2
+
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
 modmenu_version          = 4.2.0-beta.2
+
 #https://modrinth.com/mod/cloth-config/versions
 cloth_config_api_version = 8.3.115
