--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
-org.gradle.jvmargs       = -Xmx2048M
+org.gradle.jvmargs       = -Xmx8G
+org.gradle.parallel      = true
+org.gradle.daemon        = true
+java_version             = 17
 
-minecraft_version        = 1.19.2
 mod_id                   = leawind_third_person
 mod_version              = 2.0.4
 mod_group_id             = net.leawind.mc.thirdperson
@@ -9,30 +11,33 @@ mod_description          = Enhanced third person
 mod_license              = The MIT License (MIT)
 mod_icon                 = assets/leawind_third_person/icon.png
 mod_authors              = Leawind
-mod_url_home             = https://github.com/LEAWIND/Third-Person/wiki
+mod_url_home             = https://leawind.github.io/en/Third-Person/
 mod_url_issue            = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src              = https://github.com/LEAWIND/Third-Person
 
+# Common
+minecraft_version        = 1.19.2
 #https://minecraft.wiki/w/Pack_format
 resource_pack_format     = 9
-
 #https://modrinth.com/mod/architectury-api/versions
 enabled_platforms        = fabric,forge
 architectury_version     = 6.5.85
 
+# Fabric
 #https://fabricmc.net/develop/
 # latest: 0.15.3/0.77.0, template: 0.14.23/0.76.1
 
 fabric_loader_version    = 0.14.23
 fabric_api_version       = 0.76.1+1.19.2
 
+# Forge
 #https://files.minecraftforge.net/net/minecraftforge/forge/
 # latest: 43.3.7, template: 43.3.2
 forge_version            = 1.19.2-43.3.2
 
+# Dependencies
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
 modmenu_version          = 4.2.0-beta.2
-
 #https://modrinth.com/mod/cloth-config/versions
 cloth_config_api_version = 8.3.115
