--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Install NPM dependencies
-        run: npm ci
+        run: npm i
 
       - name: Build with VitePress
         run: |
