--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ mod_description          = Enhanced third person
 mod_license              = The MIT License (MIT)
 mod_icon                 = assets/leawind_third_person/icon.png
 mod_authors              = Leawind
-mod_url_home             = https://leawind.github.io/en/Third-Person/
+mod_url_home             = https://leawind.github.io/Third-Person/en-US/?autolang
 mod_url_issue            = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src              = https://github.com/LEAWIND/Third-Person
 
