update meta files

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,29 +1,33 @@
 modLoader = "javafml"
 loaderVersion = "[43,)"
 license = "${mod_license}"
+showAsResourcePack = true
 issueTrackerURL = "${mod_url_issue}"
 
 [[mods]]
 modId = "${mod_id}"
 version = "${mod_version}"
 displayName = "${mod_name}"
-authors = "${mod_authors}"
 description = "${mod_description}"
+authors = "${mod_authors}"
 logoFile = "TODO"
+displayURL = "${mod_url_home}"
 
 [[dependencies."${mod_id}"]]
 modId = "forge"
 mandatory = true
 versionRange = "[43,)"
 ordering = "NONE"
-side = "BOTH"
+side = "CLIENT"
+referraUrl = "https://files.minecraftforge.net/"
 
 [[dependencies."${mod_id}"]]
 modId = "minecraft"
 mandatory = true
 versionRange = "[${minecraft_version},)"
 ordering = "NONE"
-side = "BOTH"
+side = "CLIENT"
+referraUrl = "https://www.minecraft.net/"
 
 [[dependencies."${mod_id}"]]
 modId = "architectury"
@@ -31,6 +35,7 @@ mandatory = true
 versionRange = "[${architectury_version},)"
 ordering = "AFTER"
 side = "CLIENT"
+referraUrl = "https://modrinth.com/mod/architectury-api"
 
 [[dependencies."${mod_id}"]]
 modId = "cloth_config"
@@ -38,3 +43,4 @@ mandatory = false
 versionRange = "[${cloth_config_api_version},)"
 ordering = "NONE"
 side = "CLIENT"
+referraUrl = "https://modrinth.com/mod/cloth-config"
