--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ mod_id                   = leawind_third_person
 mod_version              = 2.0.6
 mod_group_id             = net.leawind.mc.thirdperson
 mod_name                 = Leawind's Third Person
-mod_description          = Enhanced third person
+mod_description          = A practical, smooth, feature-rich third-person mod.
 mod_license              = The MIT License (MIT)
 mod_icon                 = assets/leawind_third_person/icon.png
 mod_authors              = Leawind
