--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,6 +1,8 @@
 plugins {
 	id "com.github.johnrengelman.shadow" version "7.1.2"
+	id "com.modrinth.minotaur" version "2.+"
 }
+
 architectury {
 	platformSetupLoomIde()
 	forge()
@@ -65,5 +67,25 @@ publishing {
 	}
 	
 	repositories {
+	}
+}
+
+// https://github.com/modrinth/minotaur/blob/a151c425fb128cd5384242f25b6fbb0a1d18e325/README.md
+modrinth {
+	debugMode = !!publish_debug_mode
+	
+	token = System.getenv("MODRINTH_TOKEN")
+	
+	projectId = modrinth_project_id
+	versionNumber = mod_version
+	versionType = mod_version_type
+	versionName = "${mod_version}-mc${minecraft_version}-forge"
+	changelog = readChangeLog()
+	
+	uploadFile = remapJar
+	autoAddDependsOn = false
+	dependencies {
+		required.project "architectury-api"
+		optional.project "cloth-config"
 	}
 }
