--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,10 @@ org.gradle.daemon        = true
 java_version             = 17
 
 mod_id                   = leawind_third_person
-# mod_version              = 2.0.8-alpha
+#mod_version              = 2.0.8-alpha
 mod_version              = 2.0.7
+#  release | beta | alpha
+mod_version_type         = release
 mod_group_id             = net.leawind.mc.thirdperson
 mod_name                 = Leawind's Third Person
 mod_description          = A practical, smooth, feature-rich third-person mod.
@@ -42,3 +44,7 @@ forge_version            = 1.19.2-43.3.2
 modmenu_version          = 4.2.0-beta.2
 #https://modrinth.com/mod/cloth-config/versions
 cloth_config_api_version = 8.3.115
+
+# Publishing
+modrinth_project_id      = leawind-third-person
+publish_debug_mode       = true
