--- a/gradle.properties
+++ b/gradle.properties
@@ -19,31 +19,30 @@ mod_url_issue            = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src              = https://github.com/LEAWIND/Third-Person
 
 # Common
-minecraft_version        = 1.19.2
+minecraft_version        = 1.19.3
 #https://minecraft.wiki/w/Pack_format
-resource_pack_format     = 9
+resource_pack_format     = 12
 #https://modrinth.com/mod/architectury-api/versions
 enabled_platforms        = fabric,forge
-architectury_version     = 6.6.92
+architectury_version     = 7.1.86
 
 # Fabric
 #https://fabricmc.net/develop/
-# latest: 0.15.7/0.77.0, template: 0.14.23/0.76.1
-
-fabric_loader_version    = 0.15.7
-fabric_api_version       = 0.77.0+1.19.2
+# latest: 0.15.7, 0.76.1+1.19.3,  template: 0.14.23, 0.76.1+1.19.3
+fabric_loader_version    = 0.14.23
+fabric_api_version       = 0.76.1+1.19.3
 
 # Forge
 #https://files.minecraftforge.net/net/minecraftforge/forge/
-# latest: 43.3.8, template: 43.3.2
-forge_version            = 1.19.2-43.3.8
+# latest: 44.1.0, template: 44.1.23
+forge_version            = 1.19.3-44.1.23
 
 # Dependencies
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
-modmenu_version          = 4.2.0-beta.2
+modmenu_version          = 5.1.0
 #https://modrinth.com/mod/cloth-config/versions
-cloth_config_api_version = 8.3.115
+cloth_config_api_version = 9.1.104
 
 # Publishing
 modrinth_project_id      = leawind-third-person
