--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon        = true
 java_version             = 17
 
 mod_id                   = leawind_third_person
-#mod_version              = 2.0.8-alpha
-mod_version              = 2.0.7
+mod_version              = 2.0.8-alpha
+#mod_version              = 2.0.7
 #  release | beta | alpha
 mod_version_type         = release
 mod_group_id             = net.leawind.mc.thirdperson
