--- a/gradle.properties
+++ b/gradle.properties
@@ -43,6 +43,9 @@ forge_version            = 1.19.4-45.2.4
 modmenu_version          = 6.3.1
 #https://modrinth.com/mod/cloth-config/versions
 cloth_config_api_version = 10.1.117
+#https://modrinth.com/mod/yacl/versions
+yacl_mc_version          = 3.1.1+1.19.4
+yacl_version             = 3.1.1
 
 # Publishing
 modrinth_project_id      = leawind-third-person
