--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,11 @@ allprojects {
 		maven { url "https://jitpack.io" }
 		// Cloth Config API
 		maven { url "https://maven.shedaniel.me/" }
+		// YACL
+		maven { url "https://maven.isxander.dev/releases" }
+		maven { url "https://maven.terraformersmc.com/releases" }
+		maven { url "https://maven.quiltmc.org/repository/release" }
+		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 		// Mod Menu
 		maven { url "https://maven.terraformersmc.com/releases" }
 		// Modrinth
