--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	modApi "dev.architectury:architectury-fabric:${architectury_version}"
 	// Cloth Config API
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") { exclude(group: "net.fabricmc.fabric-api") }
+	// YACL
+	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}"
 	// ModMenu
 	modApi("com.terraformersmc:modmenu:${modmenu_version}") { transitive(false) }
 }
