start porting to 1.20.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,33 +19,34 @@ mod_url_issue            = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src              = https://github.com/LEAWIND/Third-Person
 
 # Common
-minecraft_version        = 1.19.4
+minecraft_version        = 1.20.1
 #https://minecraft.wiki/w/Pack_format
-resource_pack_format     = 13
+resource_pack_format     = 15
 #https://modrinth.com/mod/architectury-api/versions
 enabled_platforms        = fabric,forge
-architectury_version     = 8.2.91
+architectury_version     = 9.2.14
 
 # Fabric
 #https://fabricmc.net/develop/
-# latest: 0.15.7, 0.87.2+1.19.4,  template: 0.14.23, 0.87.1+1.19.4
+# latest: 0.15.7,0.92.0+1.20.1,  template:
+yarn_mappings            = 1.20.1+build.10
 fabric_loader_version    = 0.15.7
-fabric_api_version       = 0.87.2+1.19.4
+fabric_api_version       = 0.92.0+1.20.1
 
 # Forge
 #https://files.minecraftforge.net/net/minecraftforge/forge/
-# latest: 45.2.0 , template: 45.2.4
-forge_version            = 1.19.4-45.2.4
+# latest: 47.2.0 , template:
+forge_version            = 1.20.1-47.2.0
 
 # Dependencies
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
-modmenu_version          = 6.3.1
+modmenu_version          = 7.2.2
 #https://modrinth.com/mod/cloth-config/versions
-cloth_config_api_version = 10.1.117
+cloth_config_api_version = 11.1.118
 #https://modrinth.com/mod/yacl/versions
-yacl_mc_version          = 3.1.1+1.19.4
-yacl_version             = 3.1.1
+yacl_mc_version          = 3.2.2+1.20
+yacl_version             = 3.2.2
 
 # Publishing
 modrinth_project_id      = leawind-third-person
