--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,9 +8,14 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
 	modApi "dev.architectury:architectury:${architectury_version}"
 	// Cloth config
-	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") { exclude(group: "net.fabricmc.fabric-api") }
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+		exclude module: 'modmenu'
+	}
 	// YACL
-	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}"
+	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}") {
+		exclude module: 'modmenu'
+	}
 }
 publishing {
 	publications {
