--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -25,9 +25,16 @@ dependencies {
 	// Architectury-api
 	modApi "dev.architectury:architectury-fabric:${architectury_version}"
 	// Cloth Config API
-	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") { exclude(group: "net.fabricmc.fabric-api") }
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+		exclude module: 'modmenu'
+	}
 	// YACL
-	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}"
+	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}") {
+		exclude module: 'modmenu'
+	}
+	// ModMenu
+	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
 }
 shadowJar {
 	exclude "architectury.common.json"
@@ -84,5 +91,6 @@ modrinth {
 		required.project "fabric-api"
 		required.project "architectury-api"
 		optional.project "cloth-config"
+		optional.project "modmenu"
 	}
 }
