--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,9 @@ fabric_api_version       = 0.92.0+1.20.1
 forge_version            = 1.20.1-47.2.20
 
 # Dependencies
+#https://github.com/TerraformersMC/ModMenu/releases
+#https://modrinth.com/mod/modmenu/versions
+modmenu_version          = 7.2.2
 #https://modrinth.com/mod/cloth-config/versions
 cloth_config_api_version = 11.1.118
 #https://modrinth.com/mod/yacl/versions
