--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -22,8 +22,11 @@ dependencies {
 	modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 	common(project(path: ":common", configuration: "namedElements")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
+	
 	// Architectury-api
 	modApi "dev.architectury:architectury-fabric:${architectury_version}"
+	// MixinExtras
+	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${fabric_mixin_extras_version}")))
 	// Cloth Config API
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
