--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,9 @@ fabric_api_version       = 0.92.0+1.20.1
 forge_version            = 1.20.1-47.2.20
 
 # Dependencies
+#MixinExtras
+fabric_mixin_extras_version = 0.2.2
+forge_mixin_extras_version = 0.3.5
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
 modmenu_version          = 7.2.2
