update version to alpha

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.daemon        = true
 java_version             = 17
 
 mod_id                   = leawind_third_person
-#mod_version              = 2.0.8-alpha
-mod_version              = 2.0.8-beta.3
+mod_version              = 2.0.8-alpha
+#mod_version              = 2.0.8-beta.3
 #  release | beta | alpha
-mod_version_type         = beta
+mod_version_type         = alpha
 mod_group_id             = net.leawind.mc.thirdperson
 mod_name                 = Leawind's Third Person
 mod_description          = A practical, smooth, feature-rich third-person mod.
