--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,13 +19,7 @@ dependencies {
 	
 }
 publishing {
-	publications {
-		mavenCommon(MavenPublication) {
-			artifactId = mod_id
-			from components.java
-		}
-	}
+	publications {}
 	
-	repositories {
-	}
+	repositories {}
 }
