--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -48,9 +48,7 @@ remapJar {
 sourcesJar {
 	def commonSources = project(":common").sourcesJar
 	dependsOn commonSources
-	from commonSources.archiveFile.map {
-		zipTree(it)
-	}
+	from commonSources.archiveFile.map { zipTree(it) }
 }
 base {
 	archivesName = rootProject.archiveFileNameOfPlatform("forge")
@@ -62,15 +60,9 @@ components.java {
 	}
 }
 publishing {
-	publications {
-		mavenForge(MavenPublication) {
-			artifactId = mod_id + "-" + project.name
-			from components.java
-		}
-	}
+	publications {}
 	
-	repositories {
-	}
+	repositories {}
 }
 
 // https://github.com/modrinth/minotaur/blob/a151c425fb128cd5384242f25b6fbb0a1d18e325/README.md
