--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id "com.github.johnrengelman.shadow" version "7.1.2"
 	id "com.modrinth.minotaur" version "2.+"
 }
-
 architectury {
 	platformSetupLoomIde()
 	forge()
@@ -25,8 +24,12 @@ configurations {
 }
 dependencies {
 	forge "net.minecraftforge:forge:${forge_version}"
-	common(project(path: ":common", configuration: "namedElements")) { transitive false }
-	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+	common(project(path: ":common", configuration: "namedElements")) {
+		transitive false
+	}
+	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) {
+		transitive = false
+	}
 	// Architectury-api
 	modApi "dev.architectury:architectury-forge:${architectury_version}"
 	// MixinExtras
@@ -48,7 +51,9 @@ remapJar {
 sourcesJar {
 	def commonSources = project(":common").sourcesJar
 	dependsOn commonSources
-	from commonSources.archiveFile.map { zipTree(it) }
+	from commonSources.archiveFile.map {
+		zipTree(it)
+	}
 }
 base {
 	archivesName = rootProject.archiveFileNameOfPlatform("forge")
@@ -61,22 +66,18 @@ components.java {
 }
 publishing {
 	publications {}
-	
 	repositories {}
 }
 
 // https://github.com/modrinth/minotaur/blob/a151c425fb128cd5384242f25b6fbb0a1d18e325/README.md
 modrinth {
 	debugMode = Boolean.parseBoolean(publish_debug_mode)
-	
 	token = System.getenv("MODRINTH_TOKEN")
-	
 	projectId = modrinth_project_id
 	versionNumber = mod_version
 	versionType = mod_version_type
 	versionName = "${mod_version}-mc${minecraft_version}-forge"
 	changelog = readChangeLog()
-	
 	uploadFile = remapJar
 	autoAddDependsOn = false
 	dependencies {
