--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,6 @@ ij_wrap_on_typing           = false
 
 
 [*.java]
-ij_continuation_indent_size                                     = 4
 ij_smart_tabs                                                   = false
 ij_visual_guides                                                = 64
 ij_java_align_consecutive_assignments                           = true
@@ -271,36 +270,11 @@ ij_java_wrap_long_lines                                         = true
 [*ConfigScreenBuilder.java]
 max_line_length = 1048576
 
-[*.nbtt]
-max_line_length                     = 150
-ij_continuation_indent_size         = 4
-ij_smart_tabs                       = false
-ij_nbtt_keep_indents_on_empty_lines = false
-ij_nbtt_space_after_colon           = true
-ij_nbtt_space_after_comma           = true
-ij_nbtt_space_before_colon          = true
-ij_nbtt_space_before_comma          = false
-ij_nbtt_spaces_within_brackets      = false
-ij_nbtt_spaces_within_parentheses   = false
-
 [*.properties]
 ij_properties_align_group_field_declarations    = true
 ij_properties_keep_blank_lines                  = false
 ij_properties_key_value_delimiter               = equals
 ij_properties_spaces_around_key_value_delimiter = true
-
-[*.yml]
-indent_size                         = 2
-ij_yaml_align_values_properties     = do_not_align
-ij_yaml_autoinsert_sequence_marker  = true
-ij_yaml_block_mapping_on_new_line   = false
-ij_yaml_indent_sequence_value       = true
-ij_yaml_keep_indents_on_empty_lines = false
-ij_yaml_keep_line_breaks            = true
-ij_yaml_sequence_on_new_line        = false
-ij_yaml_space_before_colon          = false
-ij_yaml_spaces_within_braces        = true
-ij_yaml_spaces_within_brackets      = true
 
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations     = true
@@ -330,19 +304,7 @@ ij_xml_space_around_equals_in_attribute = false
 ij_xml_space_inside_empty_tag           = false
 ij_xml_text_wrap                        = normal
 
-[{*.bash,*.sh,*.zsh}]
-indent_size                            = 2
-indent_style                           = space
-tab_width                              = 2
-ij_shell_binary_ops_start_line         = false
-ij_shell_keep_column_alignment_padding = false
-ij_shell_minify_program                = false
-ij_shell_redirect_followed_by_space    = false
-ij_shell_switch_cases_indented         = false
-ij_shell_use_unix_line_separator       = true
-
-[{*.gant,*.groovy,*.gy}]
-end_of_line                                                = lf
+[{*.gant,*.groovy,*.gy,build.gradle}]
 ij_smart_tabs                                              = false
 ij_groovy_align_group_field_declarations                   = false
 ij_groovy_align_multiline_array_initializer_expression     = true
@@ -535,7 +497,6 @@ ij_groovy_wrap_chain_calls_after_dot                       = false
 ij_groovy_wrap_long_lines                                  = false
 
 [{*.har,*.png.mcmeta,mcmod.info,pack.mcmeta}]
-ij_continuation_indent_size         = 4
 ij_json_array_wrapping              = normal
 ij_json_keep_blank_lines_in_code    = 0
 ij_json_keep_indents_on_empty_lines = false
@@ -580,94 +541,7 @@ ij_html_space_around_equality_in_attribute = false
 ij_html_space_inside_empty_tag             = false
 ij_html_text_wrap                          = normal
 
-[{*.kt,*.kts}]
-indent_style                                                                         = space
-ij_smart_tabs                                                                        = false
-ij_kotlin_align_in_columns_case_branch                                               = false
-ij_kotlin_align_multiline_binary_operation                                           = false
-ij_kotlin_align_multiline_extends_list                                               = false
-ij_kotlin_align_multiline_method_parentheses                                         = false
-ij_kotlin_align_multiline_parameters                                                 = true
-ij_kotlin_align_multiline_parameters_in_calls                                        = false
-ij_kotlin_allow_trailing_comma                                                       = false
-ij_kotlin_allow_trailing_comma_on_call_site                                          = false
-ij_kotlin_assignment_wrap                                                            = off
-ij_kotlin_blank_lines_after_class_header                                             = 0
-ij_kotlin_blank_lines_around_block_when_branches                                     = 0
-ij_kotlin_blank_lines_before_declaration_with_comment_or_annotation_on_separate_line = 1
-ij_kotlin_block_comment_add_space                                                    = false
-ij_kotlin_block_comment_at_first_column                                              = true
-ij_kotlin_call_parameters_new_line_after_left_paren                                  = false
-ij_kotlin_call_parameters_right_paren_on_new_line                                    = false
-ij_kotlin_call_parameters_wrap                                                       = off
-ij_kotlin_catch_on_new_line                                                          = false
-ij_kotlin_class_annotation_wrap                                                      = split_into_lines
-ij_kotlin_continuation_indent_for_chained_calls                                      = true
-ij_kotlin_continuation_indent_for_expression_bodies                                  = true
-ij_kotlin_continuation_indent_in_argument_lists                                      = true
-ij_kotlin_continuation_indent_in_elvis                                               = true
-ij_kotlin_continuation_indent_in_if_conditions                                       = true
-ij_kotlin_continuation_indent_in_parameter_lists                                     = true
-ij_kotlin_continuation_indent_in_supertype_lists                                     = true
-ij_kotlin_else_on_new_line                                                           = false
-ij_kotlin_enum_constants_wrap                                                        = off
-ij_kotlin_extends_list_wrap                                                          = off
-ij_kotlin_field_annotation_wrap                                                      = split_into_lines
-ij_kotlin_finally_on_new_line                                                        = false
-ij_kotlin_if_rparen_on_new_line                                                      = false
-ij_kotlin_import_nested_classes                                                      = false
-ij_kotlin_imports_layout                                                             = *, java.**, javax.**, kotlin.**, ^
-ij_kotlin_insert_whitespaces_in_simple_one_line_method                               = true
-ij_kotlin_keep_blank_lines_before_right_brace                                        = 2
-ij_kotlin_keep_blank_lines_in_code                                                   = 2
-ij_kotlin_keep_blank_lines_in_declarations                                           = 2
-ij_kotlin_keep_first_column_comment                                                  = true
-ij_kotlin_keep_indents_on_empty_lines                                                = false
-ij_kotlin_keep_line_breaks                                                           = true
-ij_kotlin_lbrace_on_next_line                                                        = false
-ij_kotlin_line_break_after_multiline_when_entry                                      = true
-ij_kotlin_line_comment_add_space                                                     = false
-ij_kotlin_line_comment_add_space_on_reformat                                         = false
-ij_kotlin_line_comment_at_first_column                                               = true
-ij_kotlin_method_annotation_wrap                                                     = split_into_lines
-ij_kotlin_method_call_chain_wrap                                                     = off
-ij_kotlin_method_parameters_new_line_after_left_paren                                = false
-ij_kotlin_method_parameters_right_paren_on_new_line                                  = false
-ij_kotlin_method_parameters_wrap                                                     = off
-ij_kotlin_name_count_to_use_star_import                                              = 5
-ij_kotlin_name_count_to_use_star_import_for_members                                  = 3
-ij_kotlin_packages_to_use_import_on_demand                                           = java.util.*, kotlinx.android.synthetic.**, io.ktor.**
-ij_kotlin_parameter_annotation_wrap                                                  = off
-ij_kotlin_space_after_comma                                                          = true
-ij_kotlin_space_after_extend_colon                                                   = true
-ij_kotlin_space_after_type_colon                                                     = true
-ij_kotlin_space_before_catch_parentheses                                             = true
-ij_kotlin_space_before_comma                                                         = false
-ij_kotlin_space_before_extend_colon                                                  = true
-ij_kotlin_space_before_for_parentheses                                               = true
-ij_kotlin_space_before_if_parentheses                                                = true
-ij_kotlin_space_before_lambda_arrow                                                  = true
-ij_kotlin_space_before_type_colon                                                    = false
-ij_kotlin_space_before_when_parentheses                                              = true
-ij_kotlin_space_before_while_parentheses                                             = true
-ij_kotlin_spaces_around_additive_operators                                           = true
-ij_kotlin_spaces_around_assignment_operators                                         = true
-ij_kotlin_spaces_around_equality_operators                                           = true
-ij_kotlin_spaces_around_function_type_arrow                                          = true
-ij_kotlin_spaces_around_logical_operators                                            = true
-ij_kotlin_spaces_around_multiplicative_operators                                     = true
-ij_kotlin_spaces_around_range                                                        = false
-ij_kotlin_spaces_around_relational_operators                                         = true
-ij_kotlin_spaces_around_unary_operator                                               = false
-ij_kotlin_spaces_around_when_arrow                                                   = true
-ij_kotlin_variable_annotation_wrap                                                   = off
-ij_kotlin_while_on_new_line                                                          = false
-ij_kotlin_wrap_elvis_expressions                                                     = 1
-ij_kotlin_wrap_expression_body_functions                                             = 0
-ij_kotlin_wrap_first_method_in_call_chain                                            = false
-
 [{*.markdown,*.md}]
-ij_continuation_indent_size                         = 4
 ij_visual_guides                                    = 64
 ij_markdown_force_one_space_after_blockquote_symbol = true
 ij_markdown_force_one_space_after_header_symbol     = true
@@ -676,7 +550,7 @@ ij_markdown_force_one_space_between_words           = true
 ij_markdown_format_tables                           = true
 ij_markdown_insert_quote_arrows_on_wrap             = true
 ij_markdown_keep_indents_on_empty_lines             = false
-ij_markdown_keep_line_breaks_inside_text_blocks     = true
+ij_markdown_keep_line_breaks_inside_text_blocks     = false
 ij_markdown_max_lines_around_block_elements         = 1
 ij_markdown_max_lines_around_header                 = 1
 ij_markdown_max_lines_between_paragraphs            = 1
@@ -686,6 +560,6 @@ ij_markdown_min_lines_between_paragraphs            = 1
 ij_markdown_wrap_text_if_long                       = true
 ij_markdown_wrap_text_inside_blockquotes            = true
 
-[{*.toml,Cargo.lock,Cargo.toml.orig,Gopkg.lock,Pipfile,poetry.lock}]
+[*.toml]
 ij_smart_tabs                       = false
 ij_toml_keep_indents_on_empty_lines = false
