--- a/gradle.properties
+++ b/gradle.properties
@@ -1,57 +1,54 @@
-org.gradle.jvmargs       = -Xmx8G
-org.gradle.parallel      = true
-org.gradle.daemon        = true
-java_version             = 17
-
-mod_id                   = leawind_third_person
-mod_version              = 2.0.8-alpha
+org.gradle.jvmargs          = -Xmx8G
+org.gradle.parallel         = true
+org.gradle.daemon           = true
+java_version                = 17
+############################
+# Basic
+mod_id                      = leawind_third_person
+mod_version                 = 2.0.8-alpha
 #mod_version              = 2.0.8-beta.4
 #  release | beta | alpha
-mod_version_type         = beta
-mod_group_id             = net.leawind.mc.thirdperson
-mod_name                 = Leawind's Third Person
-mod_description          = A practical, smooth, feature-rich third-person mod.
-mod_license              = The MIT License (MIT)
-mod_icon                 = assets/leawind_third_person/icon.png
-mod_authors              = Leawind
-mod_url_home             = https://leawind.github.io/Third-Person/en-US/?autolang
-mod_url_issue            = https://github.com/LEAWIND/Third-Person/issue
-mod_url_src              = https://github.com/LEAWIND/Third-Person
-
+mod_version_type            = beta
+mod_group_id                = net.leawind.mc.thirdperson
+mod_name                    = Leawind's Third Person
+mod_description             = A practical, smooth, feature-rich third-person mod.
+mod_license                 = The MIT License (MIT)
+mod_icon                    = assets/leawind_third_person/icon.png
+mod_authors                 = Leawind
+mod_url_home                = https://leawind.github.io/Third-Person/en-US/?autolang
+mod_url_issue               = https://github.com/LEAWIND/Third-Person/issue
+mod_url_src                 = https://github.com/LEAWIND/Third-Person
+############################
 # Common
-minecraft_version        = 1.20.1
+minecraft_version           = 1.20.1
 #https://minecraft.wiki/w/Pack_format
-resource_pack_format     = 15
+resource_pack_format        = 15
 #https://modrinth.com/mod/architectury-api/versions
-enabled_platforms        = fabric,forge
-# latest:9.2.14, template:9.1.12
-architectury_version     = 9.2.14
-
-# Fabric
+enabled_platforms           = fabric,forge
+#latest:9.2.14, template:9.1.12
+architectury_version        = 9.2.14
 #https://fabricmc.net/develop/
-# latest: 0.15.7,0.92.0+1.20.1,  template: 0.14.23,0.90.4+1.20.1
-yarn_mappings            = 1.20.1+build.10
-fabric_loader_version    = 0.15.7
-fabric_api_version       = 0.92.0+1.20.1
-
-# Forge
+#latest: 0.15.7,0.92.0+1.20.1,  template: 0.14.23,0.90.4+1.20.1
+yarn_mappings               = 1.20.1+build.10
+fabric_loader_version       = 0.15.7
+fabric_api_version          = 0.92.0+1.20.1
 #https://files.minecraftforge.net/net/minecraftforge/forge/
-# latest: 47.2.20 , template:1.20.1-47.2.1
-forge_version            = 1.20.1-47.2.20
-
+#latest: 47.2.20 , template:1.20.1-47.2.1
+forge_version               = 1.20.1-47.2.20
+############################
 # Dependencies
 #MixinExtras
 fabric_mixin_extras_version = 0.3.5
-forge_mixin_extras_version = 0.3.5
+forge_mixin_extras_version  = 0.3.5
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
-modmenu_version          = 7.2.2
+modmenu_version             = 7.2.2
 #https://modrinth.com/mod/cloth-config/versions
-cloth_config_api_version = 11.1.118
+cloth_config_api_version    = 11.1.118
 #https://modrinth.com/mod/yacl/versions
-yacl_mc_version          = 3.2.2+1.20
-yacl_version             = 3.2.2
-
+yacl_mc_version             = 3.2.2+1.20
+yacl_version                = 3.2.2
+############################
 # Publishing
-modrinth_project_id      = leawind-third-person
-publish_debug_mode       = true
+modrinth_project_id         = leawind-third-person
+publish_debug_mode          = true
