--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ java_version                = 17
 ############################
 # Basic
 mod_id                      = leawind_third_person
-mod_version                 = 2.0.8-alpha
-#mod_version              = 2.0.8-beta.4
+#mod_version                 = 2.0.8-alpha
+mod_version                 = 2.0.8-beta.5
 #  release | beta | alpha
 mod_version_type            = beta
 mod_group_id                = net.leawind.mc.thirdperson
