--- a/gradle.properties
+++ b/gradle.properties
@@ -20,21 +20,21 @@ mod_url_issue               = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src                 = https://github.com/LEAWIND/Third-Person
 ############################
 # Common
-minecraft_version           = 1.20.1
+minecraft_version           = 1.20.4
 #https://minecraft.wiki/w/Pack_format
 resource_pack_format        = 15
 #https://modrinth.com/mod/architectury-api/versions
 enabled_platforms           = fabric,forge
 #latest:9.2.14, template:9.1.12
-architectury_version        = 9.2.14
+architectury_version        = 11.1.17
 #https://fabricmc.net/develop/
 #latest: 0.15.7,0.92.0+1.20.1,  template: 0.14.23,0.90.4+1.20.1
-yarn_mappings               = 1.20.1+build.10
-fabric_loader_version       = 0.15.7
-fabric_api_version          = 0.92.0+1.20.1
+yarn_mappings               = 1.20.4+build.3
+fabric_loader_version       = 0.15.10
+fabric_api_version          = 0.97.0+1.20.4
 #https://files.minecraftforge.net/net/minecraftforge/forge/
 #latest: 47.2.20 , template:1.20.1-47.2.1
-forge_version               = 1.20.1-47.2.20
+forge_version               = 1.20.4-49.0.43
 ############################
 # Dependencies
 #MixinExtras
@@ -42,12 +42,12 @@ fabric_mixin_extras_version = 0.3.5
 forge_mixin_extras_version  = 0.3.5
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
-modmenu_version             = 7.2.2
+modmenu_version             = 9.1.0-beta.1
 #https://modrinth.com/mod/cloth-config/versions
-cloth_config_api_version    = 11.1.118
+cloth_config_api_version    = 13.0.121
 #https://modrinth.com/mod/yacl/versions
-yacl_mc_version             = 3.2.2+1.20
-yacl_version                = 3.2.2
+yacl_mc_version             = 3.3.2+1.20.4
+yacl_version                = 3.3.2
 ############################
 # Publishing
 modrinth_project_id         = leawind-third-person
