--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
 	"scripts": {
 		"docs:dev": "vitepress dev docs",
 		"docs:build": "vitepress build docs",
-		"docs:preview": "vitepress preview docs",
-		"docs:bp": "vitepress build docs && vitepress preview docs"
+		"docs:clean": "rimraf docs/.vitepress/dist",
+		"docs:rebuild": "run-s docs:clean docs:build",
+		"docs:preview": "vitepress preview docs"
 	},
 	"private": true,
 	"dependencies": {
+		"npm-run-all": "^4.1.5",
+		"rimraf": "^5.0.7",
 		"vitepress": "1.0.0-rc.44"
 	},
 	"devDependencies": {
