--- a/.editorconfig
+++ b/.editorconfig
@@ -153,7 +153,7 @@ ij_java_new_line_after_lparen_in_annotation                     = false
 ij_java_new_line_after_lparen_in_deconstruction_pattern         = true
 ij_java_new_line_after_lparen_in_record_header                  = false
 ij_java_packages_to_use_import_on_demand                        = java.awt.*, javax.swing.*
-ij_java_parameter_annotation_wrap                               = split_into_lines
+ij_java_parameter_annotation_wrap                               = normal
 ij_java_parentheses_expression_new_line_after_left_paren        = false
 ij_java_parentheses_expression_right_paren_on_new_line          = false
 ij_java_place_assignment_sign_on_next_line                      = false
