--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"docs:build": "vitepress build docs",
 		"docs:clean": "rimraf docs/.vitepress/dist",
 		"docs:rebuild": "run-s docs:clean docs:build",
+		"docs:pretty": "prettier -w \"./docs/**/*.md\"",
 		"docs:preview": "vitepress preview docs"
 	},
 	"private": true,
@@ -20,6 +21,7 @@
 		"@types/node": "^20.11.19",
 		"markdown-it-mathjax3": "^4.3.2",
 		"mermaid": "^10.9.1",
+		"prettier": "^3.3.2",
 		"vitepress-plugin-mermaid": "^2.0.16"
 	}
 }
