--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ java_version                = 17
 # Basic
 mod_id                      = leawind_third_person
 #mod_version                 = 2.0.8-alpha
-mod_version                 = 2.0.8-beta.5
+mod_version                 = 2.0.8
 #  release | beta | alpha
-mod_version_type            = beta
+mod_version_type            = release
 mod_group_id                = net.leawind.mc.thirdperson
 mod_name                    = Leawind's Third Person
 mod_description             = A practical, smooth, feature-rich third-person mod.
