--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,7 @@ java_version                = 17
 ############################
 # Basic
 mod_id                      = leawind_third_person
-#mod_version                 = 2.0.8-alpha
-mod_version                 = 2.0.8
+mod_version                 = 2.0.9-beta.1
 #  release | beta | alpha
 mod_version_type            = release
 mod_group_id                = net.leawind.mc.thirdperson
