--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ java_version                = 17
 mod_id                      = leawind_third_person
 mod_version                 = 2.0.9-beta.1
 #  release | beta | alpha
-mod_version_type            = release
+mod_version_type            = beta
 mod_group_id                = net.leawind.mc.thirdperson
 mod_name                    = Leawind's Third Person
 mod_description             = A practical, smooth, feature-rich third-person mod.
