--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -37,9 +37,8 @@ dependencies {
 		exclude module: 'modmenu'
 	}
 	// YACL
-	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${yacl_mc_version}") {
-		exclude module: 'modmenu'
-	}
+	modImplementation "dev.isxander:yet-another-config-lib:${yacl_mc_version}-fabric"
+
 	// ModMenu
 	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
 }
