rename file changelog_latest.md to CHANGELOG_PREVIEW.md

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ String archiveFileNameOfPlatform(String platform) {
 
 // 读取更新日志
 String readChangeLog() {
-	File changelogFile = getProjectDir().toPath().resolve("changelog_latest.md").toFile()
+	File changelogFile = getProjectDir().toPath().resolve("CHANGELOG_PREVIEW.md").toFile()
 	return changelogFile.canRead() ? changelogFile.text : "No changelog"
 }
 
