update dependency version declarations

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -32,7 +32,7 @@ referraUrl = "https://www.minecraft.net/"
 [[dependencies.leawind_third_person]]
 modId = "architectury"
 mandatory = true
-versionRange = "[${architectury_version},)"
+versionRange = "(,${architectury_version}]"
 ordering = "AFTER"
 side = "CLIENT"
 referraUrl = "https://modrinth.com/mod/architectury-api"
@@ -40,7 +40,7 @@ referraUrl = "https://modrinth.com/mod/architectury-api"
 [[dependencies.leawind_third_person]]
 modId = "cloth_config"
 mandatory = false
-versionRange = "[${cloth_config_api_version},)"
+versionRange = "*"
 ordering = "NONE"
 side = "CLIENT"
 referraUrl = "https://modrinth.com/mod/cloth-config"
